--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "cypress": "^10.3.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1"
   },
   "dependencies": {
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
